--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+asgiref==3.8.1
+colorama==0.4.6
+diff-match-patch==20241021
 Django==5.2.3
-gunicorn
-python-decouple
-psycopg2-binary
-django-import-export
-whitenoise
-dj-database-url
-psycopg2-binary
+django-import-export==4.3.7
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==8.4.1
+python-decouple==3.8
+sqlparse==0.5.3
+tablib==3.8.0
+tzdata==2025.2
