--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: conf2025
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: "./start.sh"
-    startCommand: gunicorn conf2025.wsgi:application
+    startCommand: |
+      python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      gunicorn conf2025.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: conf2025.settings
